<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Data Storage</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="open_preferences">Preferences</string>
    <string name="open_sqlite">SQLite</string>
    <string name="sample_text">Sample Text</string>
    <string name="title_activity_set_preferences">SetPreferencesActivity</string>
    <string name="book_name">Android Book Name</string>
    <string name="book_author">Android Book Author</string>
    <string name="bookname_hint">Max. 70 characters</string>
    <string name="bookauthor_hint">Max. 70 characters</string>
    <string name="description_hint">Max. 255 characters</string>
    <string name="description">Description</string>
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="title_activity_sqlite">SQLiteActivity</string>
    <string name="enter_msg">Blog Message</string>
    <string name="save_msg">Save</string>
    <string name="cancel_msg">Cancel</string>
    <string name="save_success_msg">Message saved successfully!</string>
    <string name="btn_close">Close</string>
    <string name="activity_text">Android Data Storage Sample</string>
    <string name="preference_headline">Preference Storage View</string>
    <string name="sqllite_headline">SQLite View</string>

</resources>
