<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/teal"
    tools:context=".SQLiteActivity" >

    <TextView
        android:id="@+id/headlineText"
        android:layout_width="246dp"
        android:layout_height="53dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="44dp"
        android:text="@string/sqllite_headline"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/enter_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/enter_msg"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_msg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLength="255"
        android:hint="Maximum 255 Characters Only" />

    <Button
        android:id="@+id/save_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/msg"
        android:layout_below="@+id/msg"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="26dp"
        android:text="@string/save_msg"
        android:background="#FBFB93"
        android:onClick="saveMessage"/>

    <Button
        android:id="@+id/cancel_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/save_msg"
        android:layout_alignBottom="@+id/save_msg"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/save_msg"
        android:text="@string/cancel_msg"
        android:background="#FBFB93"
        android:onClick="cancelMessage" />

</RelativeLayout>
